# peerey

./: .gitignore  Cargo.toml
peerey-client/: Cargo.toml
peerey-client/src/: main.rs  message.rs
peerey-server/: Cargo.toml
peerey-server/src/: chat_server.rs  codec.rs  main.rs
