[package]
name = "peerey-client"
version = "0.1.0"
authors = ["flauntingspade4 <48335751+flauntingspade4@users.noreply.github.com>"]
edition = "2018"

[dependencies]
druid = ">=0.7.0"
tokio = {version = ">=1.0.0", default-features = false, features = ["net", "io-util", "macros", "rt-multi-thread"]}
bincode = ">=1.3.0"
crossbeam = ">=0.8.0"

[dependencies.serde]
version = ">=1.0.0"
features = ["derive"]
