[package]
name = "peerey-client"
version = "0.1.0"
authors = ["flauntingspade4 <48335751+flauntingspade4@users.noreply.github.com>"]
edition = "2018"

[dependencies]
druid = ">=0.7.0"

tokio = {version = "0.2.6", default-features = false, features = ["tcp", "io-util", "dns", "rt-threaded"]}
tokio-util = {version = "^0.3.0", features = ["codec"]}

bytes = "0.5.5"
crossbeam = ">=0.8.0"
