[package]
name = "peerey-server"
version = "0.1.0"
authors = ["flauntingspade4 <48335751+flauntingspade4@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
bytes = "0.5.5"
futures-util = "0.3.8"
tokio = {version = "0.2.6", default-features = false, features = ["tcp", "io-util"]}
tokio-util = ">0.3.0"
